# RecurSeria

./: CMakeLists.txt
core/: serde.ixx
core/meta/functions/: tag_invocable.ixx
core/runtime/facade/: facade.ixx
core/runtime/functions_generator/deserialization/: deserialization.ixx
core/runtime/functions_generator/serialization/: serialization.ixx
core/runtime/mapper/: deserialization.ixx  interface.ixx  mapper.ixx  serialization.ixx
core/runtime/type_erasure/: void_ptr_any.ixx
core/runtime/type_erasure/functions/: deserialization.ixx  serialization.ixx
core/runtime/type_erasure/types/: raw_type_erased_value_ptr.ixx  type_erased_value_concepts.ixx  unique_ptr_type_erased_value_owner.ixx  usings.ixx
src/core/: core.ixx
src/core/meta/: meta.ixx
src/core/meta/helpers/: helpers.ixx
src/core/meta/tag_invoke/: tag_invokable.ixx
src/core/meta/types_srlz_dsrlz/: types_srlz_dsrlz.ixx
src/core/runtime/: runtime.ixx
src/core/runtime/facade/: facade.ixx
src/core/runtime/functions_generator/: dsrlz.ixx  functions_generator.ixx  srlz.ixx
src/core/runtime/mapper/: deserialization.ixx  implementation.ixx  interface.ixx  mapper.ixx  serialization.ixx
src/core/runtime/type_erasure/: type_erasure.ixx
src/targets/string/: string.ixx
src/targets/string/primitives/: dsrlz.ixx  srlz.ixx
src/targets/string/sequence/: decomposing.ixx  grouping.ixx
src/targets/string/utils/: utils.ixx
src/tests/end_to_end/: aggregate.cpp  complex.cpp  list.cpp  vector.cpp
src/tests/system/: complex.ixx
src/tests/system/aggregate_types/: aggregate.cpp
src/tests/system/containers/: list.cpp  vector.cpp
targets/string/: target.ixx  wrapped_string.ixx
targets/string/sequence/decomposing/: decomposing.ixx
targets/string/sequence/grouping/: grouping.ixx
targets/string/string_utils/floating_point/: floating_point_to_string.ixx
targets/string/string_utils/from_structure/: copy_quoted.ixx  extract_token.ixx  (+3 more)
tests/end_to_end/: basic_end_to_end.cpp  complex.cpp  vector.cpp
(+94 files in other folders)
